--- a/contact.html
+++ b/contact.html
@@ -46,19 +46,20 @@
 </div>
 <div id="form">
 <p style="font-size: medium">Send your Message :</p>
-<div class="contact">
+<div class="contact1">
 				
 	<fieldset style="float:left;">
 	<p id="form_errors"></p>
 	<p id="form_thanks"></p>
-	<form name="contact" action="https://formspree.io/sudharsan.sivasankaran@gmail.com" method="post">
+	<form id="con" name="contact" action="" method="post">
 
 	<label>Your Name <span class="req">*</span></label>
 	<input type="text" class="txt_input" name="sender_name" />
-
+	<input type="hidden" name="_next" value="/contact.html" />
+	<input type="hidden" name="_subject" value="E-Mail from your contact form" />
 	<label>Your E-Mail <span class="req">*</span></label>
-	<input type="text" class="txt_input" name="sender_email" />
-
+	<input type="email" name="_replyto" class="txt_input" name="sender_email" />
+	<input type="text" name="_gotcha" style="display:none" />
 	<label>Telephone <span class="req">*</span></label>
 	<input type="text" class="txt_input" name="sender_phone" />
 
@@ -77,6 +78,10 @@
 	</form>
 	</fieldset>
 </div>
+<script>
+    var contactform =  document.getElementById('con');
+    contactform.setAttribute('action', '//formspree.io/' + 'sudharsan.sivasankaran' + '@' + 'gmail' + '.' + 'com');
+</script>
 <p><!-- End Right Column --><!-- Begin Footer --></p>
 <div id="footer">&copy;Taram Engineering-Taram.in &nbsp;|&nbsp; Powered by WEBEM&nbsp; |&nbsp; Best view with resolution 1024*768.</div>
  </div>
