--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,15 @@
 	ul{
 	  list-style: none ;
 	}
+	/* BASIC STYLES */
+	fieldset{margin:0;padding:0;border:0;}
+	label{width:250px; display:block;}
+	.txt_input{width:250px; display:block;}
+	textarea{height:80px; width:250px;}
+	input{display:block;}
+	.req{color:#f00;font-size:90%;}
+	#form_errors{color:#f00; display:none;}
+	#form_thanks{color:#000; display:none;}
 </style>
 <script language="JavaScript" src="gen_validatorv31.js" type="text/javascript"></script>
 </head>
