--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,7 @@
 		<input type="hidden" name="_subject" value="E-Mail from your contact form" />
 		<label>Your E-Mail <span class="req">*</span></label>
 		<input type="email" name="_replyto" class="txt_input" name="sender_email" />
+		<input type="hidden" name="_format" value="plain" />
 		<input type="text" name="_gotcha" style="display:none" />
 		<label>Telephone <span class="req">*</span></label>
 		<input type="text" class="txt_input" name="sender_phone" />
@@ -89,7 +90,7 @@
 	</div>
 	<script>
 		var contactform =  document.getElementById('con');
-		contactform.setAttribute('action', '//formspree.io/' + 'vasu' + '@' + 'taram' + '.' + 'in');
+		contactform.setAttribute('action', '//formspree.io/' + 'sudharsan.sivasankaran' + '@' + 'gmail' + '.' + 'com');
 	</script>
 <p>
 </p></div>
